--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vyra Estudio | Digital Experiences</title>
+    <title>Vyra Estudio | Experiencias Digitales</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;700;900&display=swap" rel="stylesheet">
@@ -21,37 +21,41 @@
 
     <section class="section hero">
         <h1 class="hero__title">Vyra<br>Estudio</h1>
-        <p class="hero__subtitle">We make you look cool.</p>
+        <p class="hero__subtitle">Hacemos que destaques.</p>
     </section>
 
     <section class="section about">
         <div class="wrapper">
-            <h2 class="section__title">Who We Are</h2>
+            <h2 class="section__title">Quiénes Somos</h2>
             <p class="about__text">
-                We are a digital studio that believes in the power of <span
-                    class="highlight highlight--cyan">boldness</span>.
-                We help companies find their voice and project it with <span
-                    class="highlight highlight--magenta">confidence</span>.
-                We don't just build websites; we craft <span class="highlight highlight--yellow">identities</span>.
+                VYRA Estudio nace con una idea fundamental: <span class="highlight highlight--cyan">mirar las marcas
+                    desde otro ángulo.</span>
+                No creemos en romper ni empezar desde cero, sino en <span
+                    class="highlight highlight--magenta">reinterpretar</span>, revelar y evolucionar lo que ya existe.
+                <br><br>
+                Acompañamos a marcas, profesionales y proyectos a <span class="highlight highlight--yellow">virar su
+                    rumbo sin perder su esencia</span>,
+                combinando estrategia, diseño y narrativa para crear identidades coherentes, emocionales y
+                contemporáneas.
             </p>
         </div>
     </section>
 
     <section class="section services">
         <div class="wrapper">
-            <h2 class="section__title">What We Do</h2>
+            <h2 class="section__title">Qué Hacemos</h2>
             <div class="services__grid">
                 <div class="services__card">
-                    <h3 class="services__card-title">Web Design</h3>
-                    <p>Immersive experiences that captivate.</p>
+                    <h3 class="services__card-title">Diseño Web</h3>
+                    <p>Experiencias inmersivas que cautivan.</p>
                 </div>
                 <div class="services__card">
                     <h3 class="services__card-title">Branding</h3>
-                    <p>Logos and systems that stand out.</p>
+                    <p>Logotipos y sistemas que destacan.</p>
                 </div>
                 <div class="services__card">
-                    <h3 class="services__card-title">Strategy</h3>
-                    <p>Roadmaps to digital dominance.</p>
+                    <h3 class="services__card-title">Estrategia</h3>
+                    <p>Hojas de ruta para el dominio digital.</p>
                 </div>
             </div>
         </div>
@@ -59,8 +63,8 @@
 
     <section class="section contact">
         <div class="wrapper">
-            <h2 class="section__title">Let's Talk</h2>
-            <a href="mailto:hello@vyra.com" class="contact__btn">Get in Touch</a>
+            <h2 class="section__title">Hablemos</h2>
+            <a href="mailto:hello@vyra.com" class="contact__btn">Contáctanos</a>
         </div>
     </section>
 
