notas de la reunión

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <section class="section hero">
         <h1 class="hero__title">Vyra<br>Estudio</h1>
-        <p class="hero__subtitle">Hacemos que destaques.</p>
+        <!-- <p class="hero__subtitle">Hacemos que destaques.</p> -->
+        <p class="hero__subtitle">We make you look cool.</p>
     </section>
 
     <section class="section about">
