Fondo arreglado. Mediaqueries del fondo bien. Scroll zoom section 1->2 implementado

--- a/index.html
+++ b/index.html
@@ -19,28 +19,31 @@
         <div class="shapes__item shapes__item--yellow"></div>
     </div>
 
-    <section class="section hero">
-        <h1 class="hero__title">Vyra<br>Estudio</h1>
-        <!-- <p class="hero__subtitle">Hacemos que destaques.</p> -->
-        <p class="hero__subtitle">We make you look cool.</p>
-    </section>
+    <div class="intro-wrapper">
+        <section class="section hero">
+            <h1 class="hero__title">Vyra<br>Estudio</h1>
+            <!-- <p class="hero__subtitle">Hacemos que destaques.</p> -->
+            <p class="hero__subtitle">We make you look cool.</p>
+        </section>
 
-    <section class="section about">
-        <div class="wrapper">
-            <h2 class="section__title">Quiénes Somos</h2>
-            <p class="about__text">
-                VYRA Estudio nace con una idea fundamental: <span class="highlight highlight--cyan">mirar las marcas
-                    desde otro ángulo.</span>
-                No creemos en romper ni empezar desde cero, sino en <span
-                    class="highlight highlight--magenta">reinterpretar</span>, revelar y evolucionar lo que ya existe.
-                <br><br>
-                Acompañamos a marcas, profesionales y proyectos a <span class="highlight highlight--yellow">virar su
-                    rumbo sin perder su esencia</span>,
-                combinando estrategia, diseño y narrativa para crear identidades coherentes, emocionales y
-                contemporáneas.
-            </p>
-        </div>
-    </section>
+        <section class="section about">
+            <div class="wrapper">
+                <h2 class="section__title">Quiénes Somos</h2>
+                <p class="about__text">
+                    VYRA Estudio nace con una idea fundamental: <span class="highlight highlight--cyan">mirar las marcas
+                        desde otro ángulo.</span>
+                    No creemos en romper ni empezar desde cero, sino en <span
+                        class="highlight highlight--magenta">reinterpretar</span>, revelar y evolucionar lo que ya
+                    existe.
+                    <br><br>
+                    Acompañamos a marcas, profesionales y proyectos a <span class="highlight highlight--yellow">virar su
+                        rumbo sin perder su esencia</span>,
+                    combinando estrategia, diseño y narrativa para crear identidades coherentes, emocionales y
+                    contemporáneas.
+                </p>
+            </div>
+        </section>
+    </div>
 
     <section class="section services">
         <div class="wrapper">
