--- a/index.html
+++ b/index.html
@@ -49,17 +49,40 @@
         <div class="wrapper">
             <h2 class="section__title">Qué Hacemos</h2>
             <div class="services__grid">
-                <div class="services__card">
+                <div class="services__card" data-target="diseno">
                     <h3 class="services__card-title">Diseño Web</h3>
                     <p>Experiencias inmersivas que cautivan.</p>
                 </div>
-                <div class="services__card">
+                <div class="services__card" data-target="branding">
                     <h3 class="services__card-title">Branding</h3>
                     <p>Logotipos y sistemas que destacan.</p>
                 </div>
-                <div class="services__card">
+                <div class="services__card" data-target="estrategia">
                     <h3 class="services__card-title">Estrategia</h3>
                     <p>Hojas de ruta para el dominio digital.</p>
+                </div>
+            </div>
+
+            <!-- Spotlight Containers -->
+            <div class="work-spotlight" id="diseno">
+                <div class="spotlight-effect"></div>
+                <div class="spotlight-content">
+                    <h3>Proyectos de Diseño</h3>
+                    <p>Explora nuestras interfaces premiadas.</p>
+                </div>
+            </div>
+            <div class="work-spotlight" id="branding">
+                <div class="spotlight-effect"></div>
+                <div class="spotlight-content">
+                    <h3>Identidad Visual</h3>
+                    <p>Marcas que dejan huella.</p>
+                </div>
+            </div>
+            <div class="work-spotlight" id="estrategia">
+                <div class="spotlight-effect"></div>
+                <div class="spotlight-content">
+                    <h3>Consultoría Digital</h3>
+                    <p>Datos que impulsan resultados.</p>
                 </div>
             </div>
         </div>
