que hacemos hecho y logo de vyra implementado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
 <body>
 
+    <a href="#" class="logo-link">
+        <img class="logo__svg" src="svg/vyra-logo.svg" alt="Vyra Estudio">
+    </a>
+
     <div class="shapes">
         <div class="shapes__item shapes__item--cyan"></div>
         <div class="shapes__item shapes__item--magenta"></div>
@@ -22,7 +26,6 @@
     <div class="intro-wrapper">
         <section class="section hero">
             <h1 class="hero__title">Vyra<br>Estudio</h1>
-            <!-- <p class="hero__subtitle">Hacemos que destaques.</p> -->
             <p class="hero__subtitle">We make you look cool.</p>
         </section>
 
@@ -83,6 +86,52 @@
                 <div class="spotlight-content">
                     <h3>Consultoría Digital</h3>
                     <p>Datos que impulsan resultados.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section how-we-do">
+        <div class="how-we-do__wrapper">
+            <h2 class="section__title">Cómo lo hacemos</h2>
+
+            <div class="how-we-do__timeline">
+                <div class="timeline-line"></div>
+                <div class="timeline-progress"></div>
+                <div class="timeline-dots">
+                    <button class="timeline-dot" data-index="0">1</button>
+                    <button class="timeline-dot" data-index="1">2</button>
+                    <button class="timeline-dot" data-index="2">3</button>
+                    <button class="timeline-dot" data-index="3">4</button>
+                </div>
+            </div>
+
+            <div class="how-we-do__container">
+                <div class="how-we-do__card">
+                    <span class="how-we-do__step">01</span>
+                    <h3 class="how-we-do__title">Te escuchamos</h3>
+                    <p class="how-we-do__desc">Primera parte del proceso creativo en el que el equipo de Vyra Estudio
+                        escucha de manera activa los problemas del cliente.</p>
+                </div>
+                <div class="how-we-do__card">
+                    <span class="how-we-do__step">02</span>
+                    <h3 class="how-we-do__title">Te proponemos</h3>
+                    <p class="how-we-do__desc">Proponemos diferentes maneras de abordar el problema y elegimos la
+                        solución más eficiente y con la que más se identifica el cliente.</p>
+                </div>
+                <div class="how-we-do__card">
+                    <span class="how-we-do__step">03</span>
+                    <h3 class="how-we-do__title">Creamos</h3>
+                    <p class="how-we-do__desc">En el proceso creativo de Vyra Estudio unimos arte con tecnología
+                        avanzada y storytelling. El objetivo es crear un nuevo enfoque atractivo que haga que el cliente
+                        valore más el producto.</p>
+                </div>
+                <div class="how-we-do__card">
+                    <span class="how-we-do__step">04</span>
+                    <h3 class="how-we-do__title">Te elevamos</h3>
+                    <p class="how-we-do__desc">La parte creativa siempre convive con los datos. Creamos sistemas de
+                        análisis de marketing y clientes con el objetivo de medir los resultados. Mide, ajusta y vence.
+                    </p>
                 </div>
             </div>
         </div>
